--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/ModelTrace.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/ModelTrace.vm
@@ -1,7 +1,11 @@
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 
-package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.trace
+#set($packName = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())})
+
+package ${packName}.trace
+
+import ${packName}.util.ActionType
 
 /**
  * Created by duke on 25/07/13.
@@ -17,30 +21,30 @@ trait ModelTrace: java.io.Serializable { }
 
 class ModelAddTrace(val srcPath: String, val refName: String, val previousPath : String?, val typeName: String?): ModelTrace {
     override fun toString() : String {
-        return "{ traceType : 1 , src : \"" + srcPath + "\", refname : \""+refName+"\", previousPath : \""+previousPath+"\", typename : \""+typeName+"\" }"
+        return "{ traceType : "+ActionType.ADD+" , src : \"" + srcPath + "\", refname : \""+refName+"\", previousPath : \""+previousPath+"\", typename : \""+typeName+"\" }"
     }
 }
 
 class ModelAddAllTrace(val srcPath: String, val refName: String, val previousPath : List<String>?, val typeName: List<String>?): ModelTrace {
     override fun toString() : String {
-        return "{ traceType : 3 , src : \"" + srcPath + "\", refname : \""+refName+"\", previousPath : \""+previousPath+"\", typename : \""+typeName+"\" }"
+        return "{ traceType : "+ActionType.ADD_ALL+" , src : \"" + srcPath + "\", refname : \""+refName+"\", previousPath : \""+previousPath+"\", typename : \""+typeName+"\" }"
     }
 }
 
 class ModelRemoveTrace(val srcPath: String, val refName: String, val objPath : String): ModelTrace {
     override fun toString() : String {
-        return "{ traceType : 2 , src : \"" + srcPath + "\", refname : \""+refName+"\", objpath : \""+objPath+"\" }"
+        return "{ traceType : "+ActionType.REMOVE+" , src : \"" + srcPath + "\", refname : \""+refName+"\", objpath : \""+objPath+"\" }"
     }
 }
 
 class ModelRemoveAllTrace(val srcPath: String, val refName: String): ModelTrace {
     override fun toString() : String {
-        return "{ traceType : 4 , src : \"" + srcPath + "\", refname : \""+refName+"\" }"
+        return "{ traceType : "+ActionType.REMOVE_ALL+" , src : \"" + srcPath + "\", refname : \""+refName+"\" }"
     }
 }
 
 class ModelSetTrace(val srcPath: String, val refName: String, val objPath : String?, val content : String?, val typeName: String?): ModelTrace {
     override fun toString() : String {
-        return "{ traceType : 0 , src : \"" + srcPath + "\", refname : \""+refName+"\", objPath : \""+objPath+"\", content : \""+content+"\" , typeName : \""+typeName+"\" }"
+        return "{ traceType : "+ActionType.SET+" , src : \"" + srcPath + "\", refname : \""+refName+"\", objPath : \""+objPath+"\", content : \""+content+"\" , typeName : \""+typeName+"\" }"
     }
 }
