--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/FactoryAPI.vm
@@ -2,10 +2,11 @@
 #* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
 #* @vtlvariable name="classes" type="java.util.List<org.eclipse.emf.ecore.EClassifier>" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
+#* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 
 package ${packageName};
 
-trait ${formatedFactoryName} {
+trait ${formatedFactoryName} : ${helper.fqn($ctx,$ctx.getBasePackageForUtilitiesGeneration())}.factory.KMFFactory {
 
     fun getVersion() : String
 
@@ -13,6 +14,5 @@ trait ${formatedFactoryName} {
     fun create${class.getName()}() : ${class.getName()}
 #end
 
-    fun create(metaClassName : String) : ${ctx.getKevoreeContainer().get()}?
 
 }
