minor fix for JS compat

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/Event2Trace.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/Event2Trace.vm
@@ -67,7 +67,7 @@ public class Event2Trace {
                 }
             }
             else -> {
-                System.err.println("Can't convert event : " + event);
+                throw Exception("Can't convert event : "+event);
             }
         }
         return result;
