--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/TraceCompareMethod.vm
@@ -26,12 +26,12 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
           attVal2 = similarObjCasted?.get${att.getName().substring(0, 1).toUpperCase()}${att.getName().substring(1)}()
           if(attVal != attVal2){
                  if(!inter){
-                    traces.add(${tracePack}.trace.ModelSetTrace(path()!!,"$att.getName()",null,attVal2?.toString(),null))
+                    traces.add(${tracePack}.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Att_$att.getName(),null,attVal2?.toString(),null))
                  }
           } else {
                 //att similar
                 if(inter){
-                    traces.add(${tracePack}.trace.ModelSetTrace(path()!!,"$att.getName()",null,attVal2?.toString(),null))
+                    traces.add(${tracePack}.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Att_$att.getName(),null,attVal2?.toString(),null))
                 }
           }
      #end
@@ -63,7 +63,7 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
                     }
                   }
                   if(hashResult!!.size != 0){
-                    traces.add(${tracePack}.trace.ModelAddAllTrace(path()!!,"$ref.getName()",hashResult!!.toList(),null))
+                    traces.add(${tracePack}.trace.ModelAddAllTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),hashResult!!.toList(),null))
                   }
               #else
                   attVal = null;
@@ -77,12 +77,12 @@ override fun generateDiffTraces(similarObj : ${ctx.getKevoreeContainer().get()}?
                   }
                   if(attVal != attVal2){
                          if(!inter){
-                            traces.add(${tracePack}.trace.ModelSetTrace(path()!!,"$ref.getName()",attVal2String,null,null))
+                            traces.add(${tracePack}.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),attVal2String,null,null))
                          }
                   } else {
                         //att similar
                         if(inter){
-                            traces.add(${tracePack}.trace.ModelSetTrace(path()!!,"$ref.getName()",attVal2String,null,null))
+                            traces.add(${tracePack}.trace.ModelSetTrace(path()!!,${FQNHelper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.util.Constants.Ref_$ref.getName(),attVal2String,null,null))
                         }
                   }
               #end
