--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/ModelTrace.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/ModelTrace.vm
@@ -21,7 +21,11 @@ trait ModelTrace: java.io.Serializable { }
 
 class ModelAddTrace(val srcPath: String, val refName: String, val previousPath : String?, val typeName: String?): ModelTrace {
     override fun toString() : String {
-        val buffer = java.lang.StringBuffer()
+#if($ctx.jS)
+val buffer = java.lang.StringBuilder("")
+#else
+val buffer = java.lang.StringBuilder()
+#end
         buffer.append("{ \"traceType\" : "+ActionType.ADD+" , \"src\" : \"" + srcPath + "\", \"refname\" : \""+refName+"\"")
         if(previousPath != null){ buffer.append(", \"previouspath\" : \""+previousPath+"\"") }
         if(typeName != null){ buffer.append(", \"typename\" : \""+typeName+"\"") }
@@ -34,7 +38,11 @@ class ModelAddAllTrace(val srcPath: String, val refName: String, val previousPat
 
     private fun mkString(ss : List<String>?) : String? {
             if(ss == null){return null}
+        #if($ctx.jS)
+            val buffer = java.lang.StringBuilder("")
+        #else
             val buffer = java.lang.StringBuilder()
+        #end
             var isFirst = true
             for(s in ss){
                 if(!isFirst){
@@ -47,7 +55,11 @@ class ModelAddAllTrace(val srcPath: String, val refName: String, val previousPat
     }
 
     override fun toString() : String {
-        val buffer = java.lang.StringBuffer()
+        #if($ctx.jS)
+            val buffer = java.lang.StringBuilder("")
+        #else
+            val buffer = java.lang.StringBuilder()
+        #end
         buffer.append("{ \"traceType\" : "+ActionType.ADD_ALL+" , \"src\" : \"" + srcPath + "\", \"refname\" : \""+refName+"\"")
         if(previousPath!= null){ buffer.append(", \"previouspath\" : \""+mkString(previousPath)+"\"") }
         if(typeName!= null){ buffer.append(", \"typename\" : \""+mkString(typeName)+"\"") }
@@ -70,7 +82,11 @@ class ModelRemoveAllTrace(val srcPath: String, val refName: String): ModelTrace 
 
 class ModelSetTrace(val srcPath: String, val refName: String, val objPath : String?, val content : String?, val typeName: String?): ModelTrace {
     override fun toString() : String {
-        val buffer = java.lang.StringBuffer()
+        #if($ctx.jS)
+            val buffer = java.lang.StringBuilder("")
+        #else
+            val buffer = java.lang.StringBuilder()
+        #end
         buffer.append("{ \"traceType\" : "+ActionType.SET+" , \"src\" : \"" + srcPath + "\", \"refname\" : \""+refName+"\"")
         if(objPath!=null){ buffer.append(", \"objpath\" : \""+objPath+"\"") }
         if(content!=null){ buffer.append(", \"content\" : \""+content+"\"") }
@@ -97,8 +113,8 @@ open class TraceSequence(){
 #if($ctx.jS)
         val bytes = ByteArray(addtracesTxt.length)
         var i = 0
-        while(i < str.length){
-            bytes.set(i,str.get(i) as Byte)
+        while(i < addtracesTxt.length){
+            bytes.set(i,addtracesTxt.get(i) as Byte)
             i = i +1
         }
         return populateFromStream(java.io.ByteArrayInputStream(bytes))
@@ -145,7 +161,11 @@ open class TraceSequence(){
     }
 
     fun exportToString() : String {
-         val buffer = StringBuilder()
+#if($ctx.jS)
+        val buffer = java.lang.StringBuilder("")
+#else
+        val buffer = java.lang.StringBuilder()
+#end
          buffer.append("[")
          var isFirst = true
          for(trace in traces){
