--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerAPI.vm
@@ -4,7 +4,9 @@ package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.seriali
 
 public trait ModelSerializer {
 
-fun serialize(oMS : Any,ostream : java.io.OutputStream)
+    fun serialize(oMS : Any,ostream : java.io.OutputStream)
+
+    fun serialize(oMS : Any) : String?
 
 }
 
