--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/Event2Trace.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/trace/Event2Trace.vm
@@ -36,7 +36,7 @@ public class Event2Trace {
                 val casted = event.getValue() as ${ctx.getKevoreeContainer().get()}
                 val traces = compare.inter(casted, casted)
                 result.add(ModelAddTrace(event.getSourcePath()!!, event.getElementAttributeName()!!, casted.path(), casted.metaClassName()));
-                result.addAll(traces)
+                result.addAll(traces.getTraces())
             }
             ActionType.ADD_ALL -> {
                 val casted = event.getValue() as ${ctx.getKevoreeContainer().get()}
@@ -46,7 +46,7 @@ public class Event2Trace {
                     val elemCasted = elem as ${ctx.getKevoreeContainer().get()}
                     val traces = compare.inter(elemCasted, elemCasted)
                     result.add(ModelAddTrace(event.getSourcePath()!!, event.getElementAttributeName()!!, elemCasted.path(), elemCasted.metaClassName()));
-                    result.addAll(traces)
+                    result.addAll(traces.getTraces())
                     //paths.add(elemCasted.path()!!)
                     //types.add(elemCasted.metaClassName())
                 }
